--- a/projet/pom.xml
+++ b/projet/pom.xml
@@ -58,6 +58,19 @@
 			<artifactId>dbunit</artifactId>
 			<version>2.4.9</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 </project>
