--- a/projet/WebContent/WEB-INF/web.xml
+++ b/projet/WebContent/WEB-INF/web.xml
@@ -26,4 +26,16 @@
 		<servlet-name>editComputer</servlet-name>
 		<url-pattern>/editComputer</url-pattern>
 	</servlet-mapping>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/views/404.html</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/views/403.html</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/views/500.html</location>
+	</error-page>
 </web-app>
