--- a/projet/pom.xml
+++ b/projet/pom.xml
@@ -73,6 +73,13 @@
 			<version>1.0.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 	<reporting>
 		<plugins>
