Réparation du build. Déplacement du web content

--- a/docker_images/5.5/Dockerfile
+++ b/docker_images/5.5/Dockerfile
@@ -17,3 +17,6 @@ ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 3306
 CMD ["mysqld"]
 
+ADD 1-SCHEMA.sql /docker-entrypoint-initdb.d/1-SCHEMA.sql
+ADD 2-PRIVILEGES.sql /docker-entrypoint-initdb.d/2-PRIVILEGES.sql
+ADD 3-ENTRIES.sql /docker-entrypoint-initdb.d/3-ENTRIES.sql
