implémentation docker BDD + docker maven + jenkins

--- a/projet/src/main/resources/hikari.properties
+++ b/projet/src/main/resources/hikari.properties
@@ -1,4 +1,4 @@
-jdbcUrl=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull
+jdbcUrl=jdbc:mysql://172.18.0.2/computer-database-db-test?zeroDateTimeBehavior=convertToNull
 dataSource.user=admincdb
 dataSource.password=qwerty1234
 dataSource.driverClass=com.mysql.jdbc.Driver
