--- a/projet/src/test/resources/hikari.properties
+++ b/projet/src/test/resources/hikari.properties
@@ -1,5 +1,5 @@
-jdbcUrl=jdbc:mysql://localhost/dbUnit?zeroDateTimeBehavior=convertToNull
-dataSource.user=admindb
+jdbcUrl=jdbc:mysql://172.18.0.3:3306/computer-database-db-unit?zeroDateTimeBehavior=convertToNull
+dataSource.user=admincdb
 dataSource.password=qwerty1234
 dataSource.driverClass=com.mysql.jdbc.Driver
 dataSource.prepStmtCacheSize=250
