--- a/projet/pom.xml
+++ b/projet/pom.xml
@@ -31,8 +31,13 @@
 		<powermockVersion>1.6.1</powermockVersion>
 		<hikariVersion>2.4.5</hikariVersion>
 		<seleniumChromeVersion>3.3.1</seleniumChromeVersion>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junitVersion>4.12</junitVersion>
+		<seleniumCoreVersion>1.0-20081010.060147</seleniumCoreVersion>
+		<jspApiVersion>2.2.1-b03</jspApiVersion>
+		<webDriverVersion>0.9.7089</webDriverVersion>
+		<springJdbcVersion>1.5.2.RELEASE</springJdbcVersion>
+		<springVersion>2.5.6</springVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -46,7 +51,7 @@
 		<dependency>
 			<groupId>org.openqa.selenium.server</groupId>
 			<artifactId>selenium-server-coreless</artifactId>
-			<version>1.0-20081010.060147</version>
+			<version>${seleniumCoreVersion}</version>
 			<scope>>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -119,7 +124,7 @@
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>2.2.1-b03</version>
+			<version>${jspApiVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
@@ -152,11 +157,29 @@
 		<dependency>
 			<groupId>org.seleniumhq.webdriver</groupId>
 			<artifactId>webdriver-selenium</artifactId>
-			<version>0.9.7089</version>
+			<version>${webDriverVersion}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<version>${springJdbcVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>${springVersion}</version>
 		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${springJdbcVersion}</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -177,7 +200,7 @@
 	</reporting>
 	<build>
 		<plugins>
-		  <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
