--- a/projet/src/main/webapp/WEB-INF/web.xml
+++ b/projet/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
+	<welcome-file-list>
+		<welcome-file>dashboard</welcome-file>
+	</welcome-file-list>
 	<servlet>
 		<servlet-name>editComputer</servlet-name>
 		<servlet-class>com.excilys.cdb.presentation.web.EditComputer</servlet-class>
