Spring OK, tests KO (prendre en compte spring)

--- a/projet/src/main/resources/hikari.properties
+++ b/projet/src/main/resources/hikari.properties
@@ -1,6 +1,8 @@
 jdbcUrl=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull
-dataSource.user=admincdb
-dataSource.password=qwerty1234
-dataSource.driverClass=com.mysql.jdbc.Driver
-dataSource.prepStmtCacheSize=500
-dataSource.prepStmtCacheSqlLimit=4096
+user=admincdb
+password=qwerty1234
+driverClass=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+prepStmtCacheSize=500
+prepStmtCacheSqlLimit=4096
+cachePrepStmts=true
+maximumPoolSize=50
