--- a/projet/src/test/resources/hikari.properties
+++ b/projet/src/test/resources/hikari.properties
@@ -1,6 +1,8 @@
 jdbcUrl=jdbc:mysql://localhost/dbUnit?zeroDateTimeBehavior=convertToNull
-dataSource.user=admindb
-dataSource.password=qwerty1234
-dataSource.driverClass=com.mysql.jdbc.Driver
-dataSource.prepStmtCacheSize=250
-dataSource.prepStmtCacheSqlLimit=2048
+user=admindb
+password=qwerty1234
+driverClass=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+prepStmtCacheSize=500
+prepStmtCacheSqlLimit=4096
+cachePrepStmts=true
+maximumPoolSize=50
