uniformisation spring 4 + XML. + refacto mineure

--- a/projet/src/main/resources/hikari.properties
+++ b/projet/src/main/resources/hikari.properties
@@ -1,5 +1,5 @@
 jdbcUrl=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull
-user=admincdb
+user1=admincdb
 password=qwerty1234
 driverClass=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 prepStmtCacheSize=500
