--- a/projet/src/test/resources/hikari.properties
+++ b/projet/src/test/resources/hikari.properties
@@ -1,5 +1,5 @@
 jdbcUrl=jdbc:mysql://localhost/dbUnit?zeroDateTimeBehavior=convertToNull
-user=admindb
+user1=admindb
 password=qwerty1234
 driverClass=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 prepStmtCacheSize=500
