--- a/projet/pom.xml
+++ b/projet/pom.xml
@@ -37,10 +37,17 @@
 		<webDriverVersion>0.9.7089</webDriverVersion>
 		<springVersion>4.3.7.RELEASE</springVersion>
 		<jclVersion>1.7.25</jclVersion>
+		<hibernateVersion>5.2.10.Final</hibernateVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernateVersion}</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -183,10 +190,10 @@
 			<version>${jclVersion}</version>
 		</dependency>
 		<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-jdbc</artifactId>
-    <version>${springVersion}</version>
-</dependency>		
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${springVersion}</version>
+		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
